// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposits list renders correctly a single deposit 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  color: #23282d;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-8 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-10>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-10>* {
  min-width: 0;
}

.emotion-10:first-of-type {
  border-top: none;
}

.emotion-10:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-10:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class=" woocommerce-payments-page"
    id=""
  >
    <div
      class="woocommerce-filters-deposits"
    >
      <h2
        class="screen-reader-text"
      >
        Filters
      </h2>
      <div
        class="woocommerce-filters"
      >
        <div
          class="woocommerce-filters__basic-filters"
        >
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Payout currency
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All
                  </span>
                </div>
              </button>
            </div>
          </div>
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Show
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All payouts
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Payout history
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.5 15v5H20v-5h-1.5zM4 15v5h1.5v-5H4zm0 5h16v-1.5H4V20z"
                />
                <path
                  d="M12.25 16L6.5 10.75M12.25 16V3M12.25 16l5.25-5.25"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                />
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Export
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-labelledby="caption-1"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-1"
              >
                Payout history
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header info-button is-sorted is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    />
                  </th>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-1-1"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-1-1"
                    >
                      Sort by Date in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    aria-sort="none"
                    class="woocommerce-table__header is-sortable is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-1-3"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Amount
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Amount
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-1-3"
                    >
                      Sort by Amount in descending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Status
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank account
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank account
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank reference ID
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank reference ID
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                    >
                      Jan 2 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      Payout
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      $20.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Completed (paid)
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                    >
                      Jan 3 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      $30.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-warning"
                      >
                        Pending
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                    >
                      Jan 4 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      $40.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Completed (deducted)
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer emotion-10 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                1
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                payout
              </span>
            </li>
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                $50.00
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                total
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;

exports[`Deposits list renders correctly with multiple currencies 1`] = `
.emotion-0 {
  background-color: #fff;
  color: #1e1e1e;
  position: relative;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
  outline: none;
  border-radius: calc(2px - 1px);
}

.emotion-2 {
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  width: 100%;
  border-bottom: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-4>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-4>* {
  min-width: 0;
}

.emotion-4:last-child {
  border-bottom: none;
}

.emotion-4:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-4:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-6 {
  color: #1e1e1e;
  line-height: 1.2;
  margin: 0;
  color: #23282d;
  font-size: calc((16 / 13) * 13px);
  font-weight: 600;
}

.emotion-8 {
  box-sizing: border-box;
  height: auto;
  max-height: 100%;
}

.emotion-8:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-8:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  border-top: 1px solid;
  box-sizing: border-box;
  border-color: rgba(0, 0, 0, 0.1);
  padding: calc(4px * 4) calc(4px * 6);
}

.emotion-10>*+*:not( marquee ) {
  margin-left: calc(4px * 2);
}

.emotion-10>* {
  min-width: 0;
}

.emotion-10:first-of-type {
  border-top: none;
}

.emotion-10:first-of-type {
  border-top-left-radius: calc(2px - 1px);
  border-top-right-radius: calc(2px - 1px);
}

.emotion-10:last-of-type {
  border-bottom-left-radius: calc(2px - 1px);
  border-bottom-right-radius: calc(2px - 1px);
}

.emotion-12 {
  background: transparent;
  display: block;
  margin: 0!important;
  pointer-events: none;
  position: absolute;
  will-change: box-shadow;
  border-radius: inherit;
  bottom: 0;
  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0);
  opacity: 1;
  left: 0;
  right: 0;
  top: 0;
  -webkit-transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  transition: box-shadow 200ms cubic-bezier(0.08, 0.52, 0.52, 1);
  border-radius: 2px;
}

@media ( prefers-reduced-motion: reduce ) {
  .emotion-12 {
    transition-duration: 0ms;
  }
}

<div>
  <div
    class=" woocommerce-payments-page"
    id=""
  >
    <div
      class="woocommerce-filters-deposits"
    >
      <h2
        class="screen-reader-text"
      >
        Filters
      </h2>
      <div
        class="woocommerce-filters"
      >
        <div
          class="woocommerce-filters__basic-filters"
        >
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Payout currency
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All
                  </span>
                </div>
              </button>
            </div>
          </div>
          <div
            class="woocommerce-filters-filter"
          >
            <span
              class="woocommerce-filters-label"
            >
              Show
              :
            </span>
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-dropdown-button"
                type="button"
              >
                <div
                  class="woocommerce-dropdown-button__labels"
                >
                  <span>
                    All payouts
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="components-surface components-card woocommerce-table wcpay-deposits-list woocommerce-report-table has-actions has-menu emotion-0 emotion-1"
      data-wp-c16t="true"
      data-wp-component="Card"
    >
      <div
        class="emotion-2 emotion-1"
      >
        <div
          class="components-flex components-card__header components-card-header emotion-4 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardHeader"
        >
          <h2
            class="components-truncate components-text emotion-6 emotion-1"
            data-wp-c16t="true"
            data-wp-component="Text"
          >
            Payout history
          </h2>
          <div
            class="woocommerce-table__actions"
          >
            <button
              class="components-button woocommerce-table__download-button"
              type="button"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.5 15v5H20v-5h-1.5zM4 15v5h1.5v-5H4zm0 5h16v-1.5H4V20z"
                />
                <path
                  d="M12.25 16L6.5 10.75M12.25 16V3M12.25 16l5.25-5.25"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                />
              </svg>
              <span
                class="woocommerce-table__download-button__label"
              >
                Export
              </span>
            </button>
          </div>
          <div
            class="woocommerce-ellipsis-menu"
          >
            <div
              class="components-dropdown"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                class="components-button woocommerce-ellipsis-menu__toggle"
                title="Choose which values to display"
                type="button"
              >
                <svg
                  class="gridicon gridicons-ellipsis"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g>
                    <path
                      d="M7 12a2 2 0 11-4.001-.001A2 2 0 017 12zm12-2a2 2 0 10.001 4.001A2 2 0 0019 10zm-7 0a2 2 0 10.001 4.001A2 2 0 0012 10z"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="components-card__body components-card-body emotion-8 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardBody"
        >
          <div
            aria-labelledby="caption-0"
            class="woocommerce-table__table"
            role="group"
          >
            <table>
              <caption
                class="woocommerce-table__caption screen-reader-text"
                id="caption-0"
              >
                Payout history
              </caption>
              <tbody>
                <tr>
                  <th
                    class="woocommerce-table__header info-button is-sorted is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="false"
                    />
                  </th>
                  <th
                    aria-sort="descending"
                    class="woocommerce-table__header date-time is-left-aligned is-sortable is-sorted"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-1"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Date
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Date
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-1"
                    >
                      Sort by Date in ascending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Type
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Type
                    </span>
                  </th>
                  <th
                    aria-sort="none"
                    class="woocommerce-table__header is-sortable is-numeric"
                    role="columnheader"
                    scope="col"
                  >
                    <button
                      aria-describedby="header-0-3"
                      class="components-button"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        focusable="false"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M17.5 11.6L12 16l-5.5-4.4.9-1.2L12 14l4.5-3.6 1 1.2z"
                        />
                      </svg>
                      <span
                        aria-hidden="true"
                      >
                        Amount
                      </span>
                      <span
                        class="screen-reader-text"
                      >
                        Amount
                      </span>
                    </button>
                    <span
                      class="screen-reader-text"
                      id="header-0-3"
                    >
                      Sort by Amount in descending order
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Status
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Status
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank account
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank account
                    </span>
                  </th>
                  <th
                    class="woocommerce-table__header is-left-aligned"
                    role="columnheader"
                    scope="col"
                  >
                    <span
                      aria-hidden="true"
                    >
                      Bank reference ID
                    </span>
                    <span
                      class="screen-reader-text"
                    >
                      Bank reference ID
                    </span>
                  </th>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                    >
                      Jan 2 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      Payout
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      $20.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Completed (paid)
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock1"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                    >
                      Jan 3 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      $30.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-warning"
                      >
                        Pending
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock2"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
                <tr>
                  <th
                    class="woocommerce-table__item info-button is-sorted is-left-aligned"
                    scope="row"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                    >
                      <svg
                        class="gridicon gridicons-info-outline needs-offset"
                        height="18"
                        viewBox="0 0 24 24"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g>
                          <path
                            d="M13 9h-2V7h2v2zm0 2h-2v6h2v-6zm-1-7c-4.411 0-8 3.589-8 8s3.589 8 8 8 8-3.589 8-8-3.589-8-8-8m0-2c5.523 0 10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2z"
                          />
                        </g>
                      </svg>
                    </a>
                  </th>
                  <td
                    class="woocommerce-table__item date-time is-left-aligned is-sorted"
                  >
                    <a
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                    >
                      Jan 4 2020
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      Withdrawal
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-numeric"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      $40.00
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      <span
                        class="chip chip-success"
                      >
                        Completed (deducted)
                      </span>
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      MOCK BANK •••• 1234 (USD)
                    </a>
                  </td>
                  <td
                    class="woocommerce-table__item is-left-aligned"
                  >
                    <a
                      class="woocommerce-table__clickable-cell"
                      data-link-type="wc-admin"
                      href="admin.php?page=wc-admin&path=%2Fpayments%2Fpayouts%2Fdetails&id=po_mock3"
                      tabindex="-1"
                    >
                      mock_reference_key
                    </a>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="components-flex components-card__footer components-card-footer emotion-10 emotion-1"
          data-wp-c16t="true"
          data-wp-component="CardFooter"
        >
          <ul
            class="woocommerce-table__summary"
            role="complementary"
          >
            <li
              class="woocommerce-table__summary-item"
            >
              <span
                class="woocommerce-table__summary-value"
              >
                2
              </span>
              <span
                class="woocommerce-table__summary-label"
              >
                payouts
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
      <div
        aria-hidden="true"
        class="components-elevation emotion-12 emotion-1"
        data-wp-c16t="true"
        data-wp-component="Elevation"
      />
    </div>
  </div>
</div>
`;
